	Fixed bug where scrolling and refocusing using the mouse would place the caret incorrectly on IE.
	Fixed bug where you needed to hit the empty paragraph to get editor focus in IE 11.
	Fixed bug where activeEditor wasn't set to the correct editor when opening windows.
	Fixed bug where dirty state wasn't set to false when undoing to the first undo level.
	Fixed so code dialog height gets smaller that the viewport height if it doesn't fit.
	Fixed so inline editable regions scroll when pressing enter/return.
	Fixed so inline toolbar gets positioned correctly when inline element is within a scrollable container.
	Fixed various memory leaks when removing editor instances dynamically.
	Removed CSS for BR elements in visualblocks due to problems with Chrome and IE.
Version 4.0.5 (2013-08-27)
	Added visuals for UL, LI and BR to visualblocks plugin. Patch contributed by Dan Ransom.
	Added new autosave_restore_when_empty option to autosave plugin. Enabled by default.
	Fixed bug where an exception was thrown when inserting images if valid_elements didn't include an ID for the image.
	Fixed bug where the advlist plugin wouldn't properly render the splitbutton controls.
	Fixed bug where visual blocks menu item wouldn't be marked checked when using the visualblocks_default_state option.
	Fixed bug where save button in save plugin wouldn't get properly enabled when contents was changed.
	Fixed bug where it was possible to insert images without any value for it's source attribute.
	Fixed bug where altering image attributes wouldn't add a new undo level.
	Fixed bug where import rules in CSS files wouldn't be properly imported by the importcss plugin.
	Fixed bug where selectors could be imported multiple times. Producing duplicate formats.
	Fixed bug where IE would throw exception if selection was changed while the editor was hidden.
	Fixed so complex rules like .class:before doesn't get imported by default in the importcss plugin.